fixed half sections overflow on smaller screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -351,8 +351,8 @@ a {
 @media (min-width: 1366px) {
   .v-half {
     padding-inline: unset;
+    padding-block: 2rem;
     width: 50%;
-    height: 100vh;
   }
 }
 @media (min-width: 2500px) {
